@@ -1,11 +1,11 @@
 VERSION = 2.8
 ROOTDOC = release-notes.xml
 
-docbook_sources = release-notes.xml rna11y.xml rnapplets.xml rnapplications.xml \
-                  rncontrolcenter.xml rndesktop.xml rndocs.xml \
-                  rnhelp.xml rni18n.xml rnlockdown.xml \
+docbook_sources = release-notes.xml rnapplets.xml rnapplications.xml rnthemes.xml \
+                  rncontrolcenter.xml rndesktop.xml rndocs.xml rnsysadmin.xml \
+                  rni18n.xml \
                   rninstallation.xml rnplatform.xml rnstandards.xml \
-                  rnthemes.xml rnutilities.xml rntoc.xml rnwhy.xml
+                  rntoc.xml rnwhy.xml
 
 html: html/index.html
 
