@@ -18,9 +18,7 @@
       <title>Introduction</title>
       <para>The GNOME &version; Desktop is the latest release of the ever popular, multi-platform free desktop environment.</para>
 
-      <para>GNOME &version; desktop has several interesting new features and hundreds of bug fixes. These make day-to-day usage much easier,
-      with noticeable improvements in the user interface, general stability and speed, and the built-in help system. You can
-      learn more in the following sections.</para>
+      <para>Every new version of the GNOME &version; desktop arrives on schedule, with interesting new features and hundreds of bug fixes. This time GNOME makes it easier to work with removable devices and network servers, and provides valuable new tools for system administrators. You can learn more in the following sections.</para>
 
     <para>GNOME provides a user-friendly environment that &quot;just works&quot;
     for everyday users, without excess complexity or obscure features. At the same
@@ -60,11 +58,7 @@
 <!--    <xi:include href="rncontrolcenter.xml"/> -->
     <xi:include href="rnapplets.xml"/>
     <xi:include href="rnapplications.xml"/>
-    <xi:include href="rnutilities.xml"/>
-    <xi:include href="rna11y.xml"/>
-    <xi:include href="rnlockdown.xml"/>
-    <xi:include href="rnhelp.xml"/>
-    <xi:include href="rnsvg.xml"/>
+    <xi:include href="rnsysadmin.xml"/>
     <xi:include href="rnplatform.xml"/>
 </sect1>
 
