@@ -1,103 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
-                  "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
-<!ENTITY urlfiguresbase "figures/">
-<!ENTITY version "2.8">
-]>
-<sect2 id="rna11y">
-  <title>Accessibility</title>
-  <para>Support for people with disabilities has been a key focus for GNOME, so successive releases have included increasing
-  support for accessibility. GNOME &version; improves this framework, and its tools, to create a better experience for
-  existing users, and to make the desktop available to new groups of users.</para>
-  
-
-  <sect3 id="rna11y-accessibility-applet">
-  <title>Keyboard Accessibility Status</title>
-
-  <para>The new Keyboard Accessibility Status panel applet gives quick access to the Accessibility control panel, and provides
-  visual feedback when using the sticky-keys feature. The sticky-keys feature allows people with limited mobility to press
-  modifier keys, such as shift, in sequence instead of simultaneously.
-
-  <figure id="rnscreenshot-panel-applet-accessibility">
-    <title>Keyboard Indicator</title>
-      <screenshot>
-        <mediaobject>
-          <imageobject><imagedata fileref="&urlfiguresbase;panel-applet-accessibility.png" format="PNG"/>
-          </imageobject>
-        <textobject><phrase>The Keyboard Accessibility Status applet,
-      showing that the Shift and Control keys are latched.</phrase></textobject>
-      </mediaobject>
-    </screenshot>
-  </figure>
-  </para>
-
-  </sect3>
-
-  <sect3 id="rna11y-accessibility-gnopernicus">
-  <title>Screen Reader and Magnifier</title>
-
-  <para>The Gnopernicus screen reader and magnifier has some new features in GNOME &version;, based on user needs.
-
-  <itemizedlist>
-  <listitem><para>The &quot;watch any widget&quot; feature allows blind user to monitor changes to any part of the user interface. For
-  instance, blind users can track changes to a message field, while entering text in another.</para></listitem>
-
-  <listitem><para>The &quot;describe my surroundings&quot; feature gives blind users information about the context of
-  the currently focused UI component, via speech or Braille.</para></listitem>
-
-  <listitem><para>When used as an on-screen magnifier, Gnopernicus now gives users even more control over tracking and
-  cursor presentation.</para></listitem>
-  </itemizedlist>
-
-  </para>
-
-  </sect3>
-
-
-  <sect3 id="rna11y-accessibility-gok">
-  <title>On-Screen Keyboard</title>
-
-  <para>GOK provides a suite of adaptive onscreen keyboards which dynamically respond to the user's working context, for
-  users who cannot use a standard keyboard. The onscreen keyboard in GNOME &version; includes many improvements for
-  non-English language users, including full localization of the standard GOK &quot;prebuilt&quot; keyboards, and full
-  emulation of non-Latin physical keyboards.
-
-
-  </para>
-
-  <para>Other improvements include:
-
-  <itemizedlist>
-  <listitem><para>Detection of changes to the keyboard layout via the Keyboard Indicator applet.</para></listitem>
-  <listitem><para>Support for multi-group keyboards.</para></listitem>
-  <listitem><para>Greatly enhanced &quot;UI Grab&quot; features, allowing users to directly interact with more
-  kinds of application UI elements than ever before, including applications like OpenOffice.org 1.1 and Epiphany/Mozilla.</para></listitem>
-  <listitem><para>Improved stability. It restarts automatically if a critical error is detected.</para></listitem>
-  </itemizedlist>
-
-  </para>
-
-  </sect3>
-
-
-  <sect3 id="rna11y-accessibility-dasher">
-  <title>Dasher</title>
-
-  <para>Dasher is an innovative predictive input system that should be particularly useful to people with severe motor disabilities.
-  At the moment, it is primarily used for text entry, but it offers an alternative way to interact with user interface
-  controls as well. It also is useful on small devices such as PDAs, to allow more efficient text entry without a keyboard.
-
-  <figure id="rnscreenshot-accessibility-dasher">
-    <title>Dasher</title>
-      <screenshot>
-        <mediaobject>
-          <imageobject><imagedata fileref="&urlfiguresbase;dasher.png" format="PNG"/>
-          </imageobject>
-        <textobject><phrase>Dasher.</phrase></textobject>
-      </mediaobject>
-    </screenshot>
-  </figure>
-  </para>
-
-  </sect3>
-</sect2>
