@@ -1,15 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
-                  "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
-<!ENTITY urlfiguresbase "figures/">
-<!ENTITY version "2.8">
-]>
-<sect2 id="rnhelp">
-
-    <title>Online Help</title>
-    
-    <para>
-    Thanks to some dramatic text-processing performance improvements, the GNOME online help viewer is now much faster than in previous versions, making it more responsive and usable.
-	</para>
-   
-</sect2>
