@@ -1,3 +1,11 @@
+2004-09-07  Murray Cumming  <murrayc@murrayc.com>
+
+	* rnrelease.xml: Mentioned the focus of this release. Removed links to 
+	accessibility, help, svg and, and lockdown pages, until we discover  
+	something interesting there has changed. Added link to rnsysadmin.xml.
+	* Added rnsysadmin.xml
+	* Makefile: Updated appropriately.
+
 2004-09-06  Murray Cumming  <murrayc@murrayc.com>
 
 	* rnapplets.xml: Mention improved Add dialog.
